force-app/main/default/objects/E_MOC_TA_Mapping_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MROA</fullName>
                </value>
                <value>
                    <fullName>MROB</fullName>
                </value>
                <value>
                    <fullName>MROC</fullName>
                </value>
                <value>
                    <fullName>MMLF</fullName>
                </value>
                <value>
                    <fullName>MMLD</fullName>
                </value>
                <value>
                    <fullName>MPOE</fullName>
                </value>
                <value>
                    <fullName>MPOF</fullName>
                </value>
                <value>
                    <fullName>MFOP</fullName>
                </value>
                <value>
                    <fullName>TNPA</fullName>
                </value>
                <value>
                    <fullName>TNPB</fullName>
                </value>
                <value>
                    <fullName>TNPC</fullName>
                </value>
                <value>
                    <fullName>TNPD</fullName>
                </value>
                <value>
                    <fullName>TNPE</fullName>
                </value>
                <value>
                    <fullName>TNFX</fullName>
                </value>
                <value>
                    <fullName>ENRM</fullName>
                </value>
                <value>
                    <fullName>TNFL</fullName>
                </value>
                <value>
                    <fullName>TNPP</fullName>
                </value>
                <value>
                    <fullName>ENTS</fullName>
                </value>
                <value>
                    <fullName>ENMM</fullName>
                </value>
                <value>
                    <fullName>ENIM</fullName>
                </value>
                <value>
                    <fullName>ENEM</fullName>
                </value>
                <value>
                    <fullName>ENCM</fullName>
                </value>
                <value>
                    <fullName>EOSC</fullName>
                </value>
                <value>
                    <fullName>QMTS</fullName>
                </value>
                <value>
                    <fullName>QMOS</fullName>
                </value>
                <value>
                    <fullName>QMEV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TA2_Expert_Field__c</fullName>
        <label>expert field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operations Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Technologist Discipline Checklist (Any impact on the following?)</fullName>
                </value>
                <value>
                    <fullName>Technologist  Discipline Checklist  (Technologist  Safeguarding Discipline Checklist)</fullName>
                </value>
                <value>
                    <fullName>Technologist Discipline Checklist  (Consider the following specific hazards relevant to impact other disciplines)</fullName>
                </value>
                <value>
                    <fullName>Process Control Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Stationary Equipment and Piping Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Rotating Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Maintenance Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Instrument Engineering Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist (Common questions)</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist  ( Driver/Actuator (process) at Valve (e.g. Motor, MOV))</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist ( Electrical equipment/system )</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist (Emergency Backup Systems (UPS for Fire &amp; Gas and UPS for DCS, Motor of Firewater pump, Emergency Generator, Emergency lighting, remote fire fighting control equipment))</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist ( Comunication (e.g. talk-back, CCTV, radio, public announce and telecomunication network))</fullName>
                </value>
                <value>
                    <fullName>Civil and Structure Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Combustion Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Process Safety and Fire Safety Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>HSE Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Environment Discipline Checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC TA Mapping Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ENEM_E_MOC_TA_Mapping_Checklist</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM</label>
        <queue>ENEM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TNPA_E_MOC_TA_Mapping_Checklist</fullName>
        <filterScope>Queue</filterScope>
        <label>TNPA</label>
        <queue>TNPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TMC-{00000000}</displayFormat>
        <label>E-MOC TA Mapping Checklist No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>